VariableDeclarationOperation, VariableDeclarationOperationReader
Fix and refactor tests for other related components